[package]
name = "eth_data_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Ethereum primitives
alloy-primitives = "0.7"
# CLI and async
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
comfy-table = "7.0"
# HTTP client for RPC calls (for future real implementation)
reqwest = { version = "0.11", features = ["json"] }
# Hex utilities
hex = "0.4"
