[package]
name = "eth_data_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Ethereum primitives with serde support
alloy-primitives = { version = "0.7", features = ["serde"] }
# CLI and async
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
comfy-table = "7.0"
# HTTP client and RPC
reqwest = { version = "0.11", features = ["json"] }
jsonrpsee = { version = "0.20", features = ["http-client", "macros"] }
# Hex utilities
hex = "0.4"
# Caching
moka = { version = "0.12", features = ["future"] }
# Error handling and retries
backoff = { version = "0.4", features = ["tokio"] }
# Time utilities
chrono = { version = "0.4", features = ["serde"] }
